<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/primary"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:justificationMode="inter_word"
            android:padding="10dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/boarder"
            android:backgroundTint="@color/primary_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Why Should You Donate Blood?"
            android:textSize="20sp" />
        <TextView
            android:gravity="start"
            android:layout_gravity="center"
            android:background="@drawable/boarder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAlignment="inherit"
            android:text="@string/info_"
            android:textSize="20sp" />

        <TextView
            android:padding="10dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary_dark"
            android:background="@drawable/boarder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eligibility_"
            android:textSize="20sp" />

        <TextView
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="serif-monospace"
            android:background="@drawable/boarder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_"
            android:textSize="20sp"/>

        <TextView
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="serif-monospace"
            android:background="@drawable/boarder"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/female_" />
    </LinearLayout>

</ScrollView>
