<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_button_bg"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:theme="@style/AppTheme.NoActionBar"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".activities.ProfileActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_margin="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle"
                    android:src="@mipmap/blood_bank_icon_round" />
            </LinearLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_below="@+id/linearLayout1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/imgView_userIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_user"
                    android:tint="@color/white" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_userIcon"
                    android:layout_alignParentTop="true"
                    android:background="@color/editTextBG"
                    android:id="@+id/input_fullName"
                    android:hint="@string/full_name"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:textSize="15sp"
                    android:layout_toRightOf="@+id/imgView_userIcon"
                    android:layout_toEndOf="@+id/imgView_userIcon"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imgView_emailIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_email"
                    android:tint="@color/white" />

                <EditText
                    android:id="@+id/input_userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/imgView_emailIcon"
                    android:layout_toEndOf="@+id/imgView_emailIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:textSize="15sp"
                    tools:ignore="Autofill"
                    android:layout_toRightOf="@+id/imgView_emailIcon"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imgView_passwordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_passwordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imgView_passwordIcon"
                    android:background="@color/editTextBG"
                    android:id="@+id/input_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout3"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imgView_repasswordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_repasswordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imgView_repasswordIcon"
                    android:background="@color/editTextBG"
                    android:id="@+id/input_password_confirm"
                    android:hint="@string/re_type_password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:textSize="15sp"
                    android:layout_toRightOf="@+id/imgView_repasswordIcon"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relativeLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout4"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/mblno"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/ic_phone_call"
                    android:tint="@color/white" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/mblno"
                    android:id="@+id/inputMobile"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/mblno"
                    android:background="@color/editTextBG"
                    android:hint="@string/mobile"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:textSize="15sp"
                    android:inputType="phone"
                    android:layout_toRightOf="@+id/mblno"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout6"
                android:layout_below="@+id/relativeLayout5"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/home"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/ic_home"
                    android:tint="@color/white" />
                <EditText
                    android:id="@+id/inputAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userAddress"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:layout_toEndOf="@+id/home"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/home"
                    android:background="@color/editTextBG"
                    tools:ignore="Autofill"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:layout_toRightOf="@+id/home" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout7"
                android:layout_below="@+id/relativeLayout6"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/dist"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/ic_location_city"
                    android:tint="@color/white" />

                <Spinner
                    android:layout_toEndOf="@+id/dist"
                    android:id="@+id/inputDivision"
                    android:background="@color/editTextBG"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/dist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/district_list"
                    android:layout_toRightOf="@+id/dist"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp">
                </Spinner>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout8"
                android:layout_below="@+id/relativeLayout7"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/gndr"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/ic_lavatory"
                    android:tint="@color/white" />
                <Spinner
                    android:id="@+id/gender"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/gndr"
                    android:layout_alignBottom="@+id/gndr"
                    android:layout_alignParentTop="true"
                    android:background="@color/editTextBG"
                    android:entries="@array/gender"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:layout_toRightOf="@+id/gndr">
                </Spinner>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout9"
                android:layout_below="@+id/relativeLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/bg"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/ic_blood_drop"
                    android:tint="@color/white" />

                <Spinner
                    android:layout_toEndOf="@+id/bg"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:id="@+id/inputBloodGroup"
                    android:background="@color/editTextBG"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/Blood_Group"
                    android:layout_toRightOf="@+id/bg"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp">

                </Spinner>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout10"
                android:layout_below="@+id/relativeLayout9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/bd"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/ic_birth"
                    android:tint="@color/white" />

                <Button
                    android:id="@+id/btndate"
                    android:textAlignment="textStart"
                    android:layout_toEndOf="@+id/bd"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/bd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:background="@color/editTextBG"
                    android:textColor="@color/textColor"
                    android:text="@string/enter_birth_date"
                    android:layout_toRightOf="@+id/bd"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp" />

            </RelativeLayout>
            <CheckBox
                android:id="@+id/checkbox"
                android:text="@string/mark_this_to_be_a_donor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout10"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/textColor"
                android:fontFamily="sans-serif"/>


            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-medium"
                android:text="@string/signup"
                android:textColor="@color/white" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</ScrollView>